--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 
 
 :root {
-    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
@@ -26,13 +26,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 .chatGPT-app {
     max-width: 100%;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0px
 }
 
 footer {
@@ -53,11 +53,11 @@ footer {
     padding: 0 10px;
     font-weight: 500;
     font-size: 16px;
-    
+
 
     outline: 0;
     border: 0;
-    
+
     background-color: transparent;
     border-radius: 20px;
 }
@@ -68,7 +68,7 @@ footer {
     align-items: center;
     padding: 15px 25px;
     height: px;
-  
+
     border-radius: 10px;
     cursor: pointer;
 }
